# cougars-base-station

./: .gitignore  CougMissionProcesses.md  dircolors.txt  docker_setup.sh  examplemapvizconf.mvc  main_tmux.yaml  mission_plan_mission.yaml  plotjuggler_template.xml
.github/: CODEOWNERS  pull_request_template.md
base-station-ros2/: README.md  base_station_params.yaml  build.sh  colcon_build.sh  docker_setup.sh  gui_docker_setup.sh  launch.py  manual_mission.yaml  mission_plan_mission.yaml  record.sh  send_init_controls_command.sh  send_init_coug.sh  send_kill_command.sh  send_surface_command.sh  sim_manual_mission.yaml  sim_waypoint_mission.yaml  simulate.sh  start_mission.sh  static_modem_launch.yaml  touch
base-station-ros2/base_station_interfaces/: CMakeLists.txt
base-station-ros2/launch/: gui_launch.py  static_modem_launch.py  terminal_launch.py
base-station-ros2/src/base_station_coms/: CMakeLists.txt  Doxyfile  package.xml  rosdoc2.yaml
base-station-ros2/src/base_station_coms/docs/: build_docs.sh
base-station-ros2/src/base_station_coms/include/base_station_coms/: coms_protocol.hpp
base-station-ros2/src/base_station_coms/rf_bridge/: base_station_radio.py
base-station-ros2/src/base_station_coms/scripts/: base_station_radio.py  base_station_wifi.py
base-station-ros2/src/base_station_coms/src/: base_station_coms.cpp  base_station_modem.cpp  modem_pinger.cpp
base-station-ros2/src/base_station_gui/: package.xml  setup.cfg  setup.py
base-station-ros2/src/base_station_gui2/: package.xml  setup.cfg  setup.py
base-station-ros2/src/base_station_interfaces/: CMakeLists.txt  package.xml
base-station-ros2/src/base_station_interfaces/msg/: CommandVerify.msg  Connections.msg  ConsoleLog.msg  Init.msg  Status.msg  status.msg
base-station-ros2/src/base_station_interfaces/srv/: BeaconId.srv  Init.srv  LoadMission.srv  ModemControl.srv  StartMission.srv
base-station-ros2/src/base_station_utils/: package.xml  setup.cfg  setup.py
base-station-ros2/src/seatrac/: CMakeLists.txt
base_station_coms/: CMakeLists.txt
base_station_gui/: package.xml  setup.py
base_station_modem/: README.md  send_kill_command.ps1  send_kill_command.sh
base_station_modem/SeaTrac/Tools/: SeaTracProgrammer.ini  SeaTracTools.ini
base_station_modem/seatrac_setup_tool/: CMakeLists.txt  build.sh  run.sh  seatrac_config.toml
base_station_modem/seatrac_setup_tool/src/: seatrac_beacon_setup_tool.cpp
base_station_modem/topside_modem/: CMakeLists.txt  run.sh
base_station_modem/topside_modem/include/topside_modem/: coms_protocol.hpp
base_station_modem/topside_modem/src/: topside_modem.cpp
base_station_radio/: radio_status.py
dataplot/: .gitignore  map_images.py  run.py
dataplot/plotjuggler/: Coug1DepthControls.xml  Depth_Controls_Plotting.xml  plotjuggler_template.xml
dataplot/plotter_processes/: data_processor.py  map_generator.py
dataplot/plotter_processes/archive/: csv_interpreter.py  rosbag_interpreter.py
dataplot/plotter_utility/: .env.template  GMAPS_KEY.py  classes.py  classes_ros.py  config.py  cordinatehandling.py
mission_control/: deploy.py  deploy_config.json  mission.yaml  select_vehicle.sh  sync_bags.sh
mission_control/missions/: coug1_mission.json  coug2_mission.json  mission_states.json
mission_control/params/: coug1_params.yaml  coug2_params.yaml  coug3_params.yaml  coug4_params.yaml  fleet_params.yaml  vehicle_params.yaml
mission_processing/: mission_params.yaml
mission_processing/waypoint-files/: Spanish_Oaks_loop.waypoints  waypoint_planner_test.waypoints
mission_processing/waypoint-files/mission-example/: coug0-triangle.waypoints  coug1-south.waypoints  (+2 more)
mission_processing/waypoint3D/: clear_new_mission.py  process_missions.py  wptconvertor-coug.py
postprocessing/: base_station_only.ipynb  build.sh  combined_bags_mission_plots.ipynb  compared_controllers_analyze.ipynb  controls_analyze.ipynb  data_visualization.ipynb  find_good_bags.ipynb  fins_analyze.ipynb  individual_bag_plots.ipynb  launch.sh  localization_plotter.ipynb  localization_stuff.py  localization_stuff2  mission_plot.ipynb  modem_data.ipynb  modem_data_visualization.ipynb  modem_outliers.ipynb  plot_gps_pings.py  post_mission_processor_config.py  post_mission_processor_config.yaml  postmissionprocessor.py  rosbag_reader.py  rosbags_converter.py  seatrac_enums.py  state_estimation.ipynb  static_beacon_plot.py  static_beacon_plotter.py
postprocessing/acoustic_modems_data/: data_grapher.py
postprocessing/depricated/: base_station_only.ipynb  find_good_bags.ipynb  mission_plot.ipynb  modem_data.ipynb  modem_outliers.ipynb  single_vehicle.ipynb
postprocessing/launch/: launch.py
postprocessing/utils/: plotter_utils.py  rosbags_converter.py
scripts/: coug_ssh.sh  cougars_teensy.sh  demo_launch.sh  distribute_missions.sh  map_images.sh  plot_bag.sh  radio_status.sh  select_vehicle.sh  setup_ssh.sh  sim_compose.sh  sync_bags.sh  waypoint_mission_sync.sh
scripts/rosbag2_2024_12_07-12_38_45/: metadata.yaml
scripts/rosbag2_2024_12_07-13_27_43/: metadata.yaml
sim-packages/docker/: Dockerfile  docker-compose.yaml  launch.sh  setup_container.sh
sim-packages/frost_interfaces/: CMakeLists.txt  package.xml
sim/config/: flat_underwater.json  flatter.json  ros_params.yaml  torpedo_3fin.json
waypoint3D/: README.md  wptconvertor-coug.py
waypoint3D/lawnmower_depth_mission/: lawnmower_depth.bhv
waypoint3D/outputs/: 3D_mission.bhv  3D_mission.moos  dock_lawnmower.bhv  dock_n_e_s_w.bhv  dock_n_e_s_w.moos  dock_n_e_s_w_deploy.sh  dock_n_e_s_w_description.txt  dock_square.bhv  dock_square.moos  dock_square_deploy.sh  dock_square_description.txt  lawnmower_depth.bhv  lawnmower_depth.moos  lawnmower_depth_deploy.sh  lawnmower_depth_description.txt  x_y_z_waypoint.bhv  x_y_z_waypoint.moos  x_y_z_waypoint_deploy.sh
waypoint3D/src/: inputparse.py
waypoint3D/template_files/: my_waypoints.waypoints  template.bhv  template_description.txt
waypoint_planner/: waypoint_planner.py
(+109 files in other folders)
