<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_station_coms</name>
  <version>1.0.0</version>
  <description>
    A package for managing the acoustic coms of the base station modem
  </description>
  <maintainer email="cas314@byu.edu">Clayton Smith</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>


  <exec_depend>python3-serial</exec_depend>

  <build_depend>seatrac_interfaces</build_depend>
  <exec_depend>seatrac_interfaces</exec_depend>

  <build_depend>cougars_interfaces</build_depend>
  <exec_depend>cougars_interfaces</exec_depend>

  <build_depend>base_station_interfaces</build_depend>
  <exec_depend>base_station_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>python3-digi-xbee</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>